Fix features anim

--- a/www/main.html
+++ b/www/main.html
@@ -57,9 +57,9 @@
 						<div class="col-lg-offset-1 col-lg-7 col-lg-pull-3 col-md-12">
 							<div class="header-menu">
 								<nav>
-									<a href="#" class="header-menu__item header-menu__item_submenu">о застройщике</a>
+									<a href="#" class="header-menu__item header-menu__item_submenu" data-for="submenu-0">о застройщике</a>
 									<a href="#" class="header-menu__item">недвижимость</a>
-									<a href="#" class="header-menu__item header-menu__item_submenu">квартал дружбы</a>
+									<a href="#" class="header-menu__item header-menu__item_submenu" data-for="submenu-1">квартал дружбы</a>
 									<a href="#" class="header-menu__item">акции</a>
 									<a href="#" class="header-menu__item">новости</a>
 									<a href="#" class="header-menu__item">условия оплаты</a>
@@ -71,7 +71,7 @@
 				</div>
 				<div class="header-submenu">
 					<div class="container">
-						<div class="header-submenu__inner">
+						<div class="header-submenu__inner" data-for="submenu-0">
 							<div class="row">
 								<div class="col-lg-2 col-md-2">
 									<div class="header-submenu__close"></div>
@@ -85,6 +85,23 @@
 									<a href="#" class="header-submenu__item">Дневник стройки</a>
 									<a href="#" class="header-submenu__item">Технологии</a>
 									<a href="#" class="header-submenu__item">Раскрытие информации</a>
+								</div>
+							</div>
+						</div>
+						<div class="header-submenu__inner" data-for="submenu-1">
+							<div class="row">
+								<div class="col-lg-2 col-md-2">
+									<div class="header-submenu__close"></div>
+								</div>
+								<div class="col-lg-2 col-md-3">
+									<a href="#" class="header-submenu__item">О проекте 1</a>
+									<a href="#" class="header-submenu__item">Выбор на генплане 1</a>
+									<a href="#" class="header-submenu__item">Расположение 1</a>
+								</div>
+								<div class="col-lg-2 col-md-3">
+									<a href="#" class="header-submenu__item">Дневник стройки 1</a>
+									<a href="#" class="header-submenu__item">Технологии 1</a>
+									<a href="#" class="header-submenu__item">Раскрытие информации 1</a>
 								</div>
 							</div>
 						</div>
