--- a/www/main.html
+++ b/www/main.html
@@ -30,41 +30,43 @@
 
 		<header class="header">
 			<div class="header-block">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-1 col-md-4">
-							<div class="header-logo">
-								<a href="/main.html">
-									<div class="header-logo__image"><img src="images/logo.svg" alt=""></div>
-									<div class="header-logo__slogan">Самый&nbsp;приветливый<br>затройщик</div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-lg-push-8 col-md-8">
-							<div class="header-info">
-								<div class="header-info__home">
-									<a href="#">Выбрать квартиру</a>
-								</div>
-								<div class="header-info__business">
-									<a href="#">Помещения для&nbsp;бизнеса</a>
-								</div>
-								<div class="header-info__phone">
-									<a href="#">Заказать&nbsp;звонок</a>
-									<p>+7 (903) 909-4715</p>
+				<div class="header-main">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-1 col-md-4">
+								<div class="header-logo">
+									<a href="/main.html">
+										<div class="header-logo__image"><img src="images/logo.svg" alt=""></div>
+										<div class="header-logo__slogan">Самый&nbsp;приветливый<br>затройщик</div>
+									</a>
 								</div>
 							</div>
-						</div>
-						<div class="col-lg-offset-1 col-lg-7 col-lg-pull-3 col-md-12">
-							<div class="header-menu">
-								<nav>
-									<a href="#" class="header-menu__item header-menu__item_submenu" data-for="submenu-0">о застройщике</a>
-									<a href="#" class="header-menu__item">недвижимость</a>
-									<a href="#" class="header-menu__item header-menu__item_submenu" data-for="submenu-1">квартал дружбы</a>
-									<a href="#" class="header-menu__item">акции</a>
-									<a href="#" class="header-menu__item">новости</a>
-									<a href="#" class="header-menu__item">условия оплаты</a>
-									<a href="#" class="header-menu__item">контакты</a>
-								</nav>
+							<div class="col-lg-3 col-lg-push-8 col-md-8">
+								<div class="header-info">
+									<div class="header-info__home">
+										<a href="#">Выбрать квартиру</a>
+									</div>
+									<div class="header-info__business">
+										<a href="#">Помещения для&nbsp;бизнеса</a>
+									</div>
+									<div class="header-info__phone">
+										<a href="#">Заказать&nbsp;звонок</a>
+										<p>+7 (903) 909-4715</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-offset-1 col-lg-7 col-lg-pull-3 col-md-12">
+								<div class="header-menu">
+									<nav>
+										<a href="#" class="header-menu__item header-menu__item_submenu" data-for="submenu-0">о застройщике</a>
+										<a href="#" class="header-menu__item">недвижимость</a>
+										<a href="#" class="header-menu__item header-menu__item_submenu" data-for="submenu-1">квартал дружбы</a>
+										<a href="#" class="header-menu__item">акции</a>
+										<a href="#" class="header-menu__item">новости</a>
+										<a href="#" class="header-menu__item">условия оплаты</a>
+										<a href="#" class="header-menu__item">контакты</a>
+									</nav>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -132,8 +134,8 @@
 								<div class="col-lg-3 col-md-3">
 									<div class="media-item__add">
 										<div class="media-item__control">
-											<a href="#" class="media-control__map"><span>расположение</span></a>
-											<a href="#" class="media-control__filter"><span>подбор по параметрам</span></a>
+											<a href="#"><span class="media-control__image media-control__map"></span><span class="media-control__name">расположение</span></a>
+											<a href="#"><span class="media-control__image media-control__filter"></span><span class="media-control__name"><span>подбор по параметрам</span></a>
 										</div>
 										<div class="media-item__image"><a href="#"><img src="images/media-image-00.svg" alt=""></a></div>
 									</div>
@@ -251,28 +253,36 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-2 col-md-3 ">
-							<div class="apartament-options">
-								<div class="apartament-options__name">1-комнатные, 34,2 – 39,5 м<sup>2</sup></div>
-								<div class="apartament-options__price">1 500 000&#8381;<span>+</span></div>
-							</div>
+							<a href="#">
+								<div class="apartament-options">
+									<div class="apartament-options__name">1-комнатные, 34,2 – 39,5 м<sup>2</sup></div>
+									<div class="apartament-options__price">1 500 000&#8381;<span>+</span></div>
+								</div>
+							</a>
 						</div>
 						<div class="col-lg-2 col-md-3">
-							<div class="apartament-options">
-								<div class="apartament-options__name">2-комнатные, 39,5 – 59,2 м<sup>2</sup></div>
-								<div class="apartament-options__price">2 500 000&#8381;<span>+</span></div>
-							</div>
+							<a href="#">
+								<div class="apartament-options">
+									<div class="apartament-options__name">2-комнатные, 39,5 – 59,2 м<sup>2</sup></div>
+									<div class="apartament-options__price">2 500 000&#8381;<span>+</span></div>
+								</div>
+							</a>
 						</div>
 						<div class="col-lg-2 col-md-3">
-							<div class="apartament-options">
-								<div class="apartament-options__name">3-комнатные, 85,4 м<sup>2</sup></div>
-								<div class="apartament-options__price">3 000 000&#8381;<span>+</span></div>
-							</div>
+							<a href="#">
+								<div class="apartament-options">
+									<div class="apartament-options__name">3-комнатные, 85,4 м<sup>2</sup></div>
+									<div class="apartament-options__price">3 000 000&#8381;<span>+</span></div>
+								</div>
+							</a>
 						</div>
 						<div class="col-lg-2 col-md-3">
-							<div class="apartament-options">
-								<div class="apartament-options__name">4-комнатные, 81,5 м<sup>2</sup></div>
-								<div class="apartament-options__price">2 900 000&#8381;<span>+</span></div>
-							</div>
+							<a href="#">
+								<div class="apartament-options">
+									<div class="apartament-options__name">4-комнатные, 81,5 м<sup>2</sup></div>
+									<div class="apartament-options__price">2 900 000&#8381;<span>+</span></div>
+								</div>
+							</a>
 						</div>
 						<div class="col-lg-1 hidden-md"></div>
 						<div class="col-md-12 visible-md">
