--- a/www/main.html
+++ b/www/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=1280, initial-scale=1">
 	<meta name="format-detection" content="telephone=no" />
     
 	<title>Главная</title>
@@ -134,8 +134,10 @@
 								<div class="col-lg-3 col-md-3">
 									<div class="media-item__add">
 										<div class="media-item__control">
-											<a href="#"><span class="media-control__image media-control__map"></span><span class="media-control__name">расположение</span></a>
-											<a href="#"><span class="media-control__image media-control__filter"></span><span class="media-control__name"><span>подбор по параметрам</span></a>
+											<div class="media-control__block">
+												<a class="media-control__item" href="#"><span class="media-control__image media-control__map"></span><span class="media-control__name"><span>расположение</span></span></a>
+												<a class="media-control__item" href="#"><span class="media-control__image media-control__filter"></span><span class="media-control__name"><span>подбор по параметрам</span></span></a>
+											</div>
 										</div>
 										<div class="media-item__image"><a href="#"><img src="images/media-image-00.svg" alt=""></a></div>
 									</div>
@@ -162,10 +164,11 @@
 								<div class="col-lg-3 col-md-3">
 									<div class="media-item__add">
 										<div class="media-item__control">
-											<a href="#" class="media-control__map"><span>расположение</span></a>
-											<a href="#" class="media-control__filter"><span>подбор по параметрам</span></a>
+											<div class="media-control__block">
+												<a class="media-control__item" href="#"><span class="media-control__image media-control__map"></span><span class="media-control__name"><span>расположение</span></span></a>
+												<a class="media-control__item" href="#"><span class="media-control__image media-control__filter"></span><span class="media-control__name"><span>подбор по параметрам</span></span></a>
+											</div>
 										</div>
-										<div class="media-item__image"><a href="#"><img src="images/media-image-00.svg" alt=""></a></div>
 									</div>
 								</div>
 							</div>
@@ -189,11 +192,12 @@
 								</div>
 								<div class="col-lg-3 col-md-3">
 									<div class="media-item__add">
-										<div class="media-item__control">
-											<a href="#" class="media-control__map"><span>расположение</span></a>
-											<a href="#" class="media-control__filter"><span>подбор по параметрам</span></a>
+										<<div class="media-item__control">
+											<div class="media-control__block">
+												<a class="media-control__item" href="#"><span class="media-control__image media-control__map"></span><span class="media-control__name"><span>расположение</span></span></a>
+												<a class="media-control__item" href="#"><span class="media-control__image media-control__filter"></span><span class="media-control__name"><span>подбор по параметрам</span></span></a>
+											</div>
 										</div>
-										<div class="media-item__image"><a href="#"><img src="images/media-image-00.svg" alt=""></a></div>
 									</div>
 								</div>
 							</div>
