Add fix in main page

--- a/www/main.html
+++ b/www/main.html
@@ -169,6 +169,7 @@
 												<a class="media-control__item" href="#"><span class="media-control__image media-control__filter"></span><span class="media-control__name"><span>подбор по параметрам</span></span></a>
 											</div>
 										</div>
+										<div class="media-item__image"><a href="#"><img src="images/media-image-00.svg" alt=""></a></div>
 									</div>
 								</div>
 							</div>
@@ -192,12 +193,13 @@
 								</div>
 								<div class="col-lg-3 col-md-3">
 									<div class="media-item__add">
-										<<div class="media-item__control">
+										<div class="media-item__control">
 											<div class="media-control__block">
 												<a class="media-control__item" href="#"><span class="media-control__image media-control__map"></span><span class="media-control__name"><span>расположение</span></span></a>
 												<a class="media-control__item" href="#"><span class="media-control__image media-control__filter"></span><span class="media-control__name"><span>подбор по параметрам</span></span></a>
 											</div>
 										</div>
+										<div class="media-item__image"><a href="#"><img src="images/media-image-00.svg" alt=""></a></div>
 									</div>
 								</div>
 							</div>
@@ -211,7 +213,7 @@
 			<div class="features-block">
 				<div class="features-item">
 					<div class="features-item__desc features-item__desc_place">
-						<div class="features-item__image"><img src="images/desc-place.svg" alt=""></div>
+						<div class="features-item__image features-item__image_desc-place"></div>
 						<div class="features-item__header">Идеальное местоположение</div>
 						<div class="features-item__text">Расположен в экологически чистом районе, вдали от крупных промышленных предприятий, с развитой инфраструктурой и транспортной доступностью. 10 минут: до центра города, до ж/д. вокзала и аэропорта. </div>
 					</div>
@@ -219,7 +221,7 @@
 				</div>
 				<div class="features-item">
 					<div class="features-item__desc features-item__desc_structure">
-						<div class="features-item__image"><img src="images/desc-structure.svg" alt=""></div>
+						<div class="features-item__image features-item__image_desc-structure"></div>
 						<div class="features-item__header">Развитая инфраструктура</div>
 						<div class="features-item__text">В непосредственной близости расположены детские сады, школы, продуктовые супермаркеты, строительный центр, церковь Иконы Божией Матери, Крестильный храм Святого благоверного великого князя Дмитрия Донского. </div>
 					</div>
@@ -227,7 +229,7 @@
 				</div>
 				<div class="features-item">
 					<div class="features-item__desc features-item__desc_parks">
-						<div class="features-item__image"><img src="images/desc-parks.svg" alt=""></div>
+						<div class="features-item__image features-item__image_desc-parks"></div>
 						<div class="features-item__header">Благоустроенный отдых и досуг</div>
 						<div class="features-item__text">Рядом будет организован парк, площадью 1,2 Га, с прогулочными аллеями, местами для отдыха, спортивными, детскими площадками. Этот парк станет излюбленным местом для утренних пробежек, занятий спортом, прогулок с колясками и отдыха для всех жителей квартала.</div>
 					</div>
@@ -235,7 +237,7 @@
 				</div>
 				<div class="features-item">
 					<div class="features-item__desc features-item__desc_tech">
-						<div class="features-item__image"><img src="images/desc-tech.svg" alt=""></div>
+						<div class="features-item__image features-item__image_desc-tech"></div>
 						<div class="features-item__header">Современные технологии строительства</div>
 						<div class="features-item__text">При возведении жилого комплекса используются передовые технологии, в частности, для внешней отделки домов используется технология «мокрого фасада».</div>
 					</div>
@@ -243,7 +245,7 @@
 				</div>
 				<div class="features-item">
 					<div class="features-item__desc features-item__desc_comfort">
-						<div class="features-item__image"><img src="images/desc-comfort.svg" alt=""></div>
+						<div class="features-item__image features-item__image_desc-comfort"></div>
 						<div class="features-item__header">Дополнительный комфорт</div>
 						<div class="features-item__text">Зона уюта внутри и за пределами квартиры: прозрачные входные группы, улучшенная отделка входных холлов, колясочные и паркинг для велосипедов, лифты повышенной комфортности. Квартиры подготовлены под «чистовую отделку». </div>
 					</div>
